--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:postgresql://172.16.0.2:5432/amdocs
 spring.datasource.username=postgres
 spring.datasource.password=Postgres2021!
